<resources>
    <string name="app_name">GradeAnalyzer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_drawer_home">Übersicht</string>
    <string name="nav_drawer_grades">Meine Noten</string>
    <string name="nav_drawer_statistic">Statistik</string>

    <string name="avg_grade">1,6</string>
    <string name="cur_sem">5. Semester</string>
    <string name="name">Jane Doe</string>
    <string name="course">Computer Engineering ( B. Eng.)</string>
    <string name="ects">120 / 180 ECTS</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
